--- a/Game_Stats.Rmd
+++ b/Game_Stats.Rmd
@@ -128,6 +128,7 @@ player_summary
 ```
 
 Windy vs non-windy
+
 ```{r}
 library(dplyr)
 library(tidyr)
@@ -178,6 +179,7 @@ player_wind_summary
 ```
 
 Win percentage per day
+
 ```{r}
 library(dplyr)
 
@@ -227,6 +229,7 @@ ggplot(daily_summary, aes(x = Wind_Avg, y = Temp_Avg, z = Win_Percent)) +
 ```
 
 Prediction grid
+
 ```{r}
 # Get reasonable ranges from your actual data
 wind_range <- seq(min(daily_summary$Wind_Avg), max(daily_summary$Wind_Avg), length.out = 50)
@@ -284,4 +287,208 @@ head_to_head_matrix <- head_to_head_counts %>%
   pivot_wider(names_from = Loser, values_from = Wins, values_fill = 0)
 ```
 
+Elo ratings: Why is it powerful? It automatically adjusts for strength of opponent: beating top players moves you up fast, beating weak players not much. Gives you a single number to rank players, but it implicitly accounts for all games played. Great for dynamic tracking: you can plot Elo vs time to see if someone’s getting better or declining.
 
+```{r}
+library(readr)
+games_df <- read_csv(here::here("data", "TallyRallyGames.csv"))
+
+library(dplyr)
+library(tidyr)
+library(PlayerRatings)
+
+# Create all winner vs loser records
+pairwise_results <- games_df %>%
+  filter(!is.na(`Score A`) & !is.na(`Score B`)) %>%
+  mutate(
+    Winning_P1 = if_else(`Score A` > `Score B`, `Team A Player 1`, `Team B Player 1`),
+    Winning_P2 = if_else(`Score A` > `Score B`, `Team A Player 2`, `Team B Player 2`),
+    Losing_P1  = if_else(`Score A` < `Score B`, `Team A Player 1`, `Team B Player 1`),
+    Losing_P2  = if_else(`Score A` < `Score B`, `Team A Player 2`, `Team B Player 2`)
+  ) %>%
+  select(Winning_P1, Winning_P2, Losing_P1, Losing_P2) %>%
+  pivot_longer(cols = c(Winning_P1, Winning_P2), names_to = "win_role", values_to = "Winner") %>%
+  pivot_longer(cols = c(Losing_P1, Losing_P2), names_to = "lose_role", values_to = "Loser") %>%
+  transmute(Date = 1, Player1 = Winner, Player2 = Loser, Score = 1) %>%
+  distinct()
+
+# Now add inverse games (losses count as 0)
+elo_input <- bind_rows(
+  pairwise_results,
+  pairwise_results %>%
+    mutate(Player1 = Player2, Player2 = Player1, Score = 0)
+)
+
+# Run Elo model
+elo_ratings <- elo(elo_input, init = 1500, k = 32)
+
+# Show top 25 players
+elo_ratings$ratings %>%
+  arrange(desc(Rating)) %>%
+  mutate(Rating = round(Rating, 0)) %>%
+  slice_head(n = 25)
+```
+
+The **Elo rating system** is a way to estimate the skill levels of players in competitive games.
+
+It was invented by **Arpad Elo**, a Hungarian-American physics professor and chess master.\
+The system became widely used in chess, but is now used for many sports and games, including online gaming and even evaluating football teams.
+
+The system works like this:
+
+-   Each player starts with an initial rating (commonly 1500).
+-   When two players (or teams) play a match:
+    -   The expected outcome is calculated based on the difference in their ratings.
+    -   If a player performs better than expected (wins against a stronger opponent), they gain more points.
+    -   If a player performs worse than expected (loses to a weaker opponent), they lose more points.
+-   The **K-factor** controls how much the ratings adjust after each game.
+
+The expected score (probability of winning) is:
+
+$$
+E_A = \frac{1}{1 + 10^{(R_B - R_A) / 400}}
+$$
+
+where: - $R_A$ is Player A’s rating - $R_B$ is Player B’s rating
+
+Then after the match:
+
+$$
+R'_A = R_A + K \times (S_A - E_A)
+$$
+
+where: $S_A = 1$ if A wins, $0.5$ if draw, $0$ if A loses and $K$ is the adjustment factor (commonly 32).
+
+✅ It’s **self-correcting**:\
+If a player wins consistently, their rating rises, so future wins give less of a boost (and losses hurt more).
+
+✅ It’s **continuous**:\
+It tracks performance game by game, without needing to wait for a whole season.
+
+✅ It’s **predictive**:\
+A higher rating difference means a higher expected probability of winning.
+
+-   Players with the same rating are expected to win about equally often.
+-   The ratings adjust automatically to how surprising the outcomes are.
+-   It can handle long histories of matchups without starting over.
+
+You’re using this system to track and compare players like **Jim Elsner**, **Mike Prost**, and others across multiple tournaments.
+
+By plotting Elo over time, you can see:
+
+-   who’s improving
+-   who’s consistent
+-   who might be having up or down seasons.
+
+## References
+
+-   Arpad Elo, *The Rating of Chessplayers, Past and Present*, 1978.
+-   FIDE Handbook on Elo calculation: <https://handbook.fide.com/chapter/B022017>
+-   Wikipedia: <https://en.wikipedia.org/wiki/Elo_rating_system>
+
+Elo Escape!! ratings over time
+
+```{r}
+library(readr)
+library(dplyr)
+library(tidyr)
+library(stringr)
+library(lubridate)
+library(PlayerRatings)
+library(here)
+
+# Read your data
+games_df <- read_csv(here("data", "TallyRallyGames.csv"))
+
+# Create proper Date and numeric time index
+games_df <- games_df %>%
+  mutate(
+    Month_Day_Clean = str_remove(`Month Day`, "(st|nd|rd|th)"),
+    Date_str = paste(Month_Day_Clean, Year),
+    Date = mdy(Date_str)
+  )
+
+# Create numeric index (e.g. days since first date)
+games_df <- games_df %>%
+  arrange(Date) %>%
+  mutate(Date_num = as.integer(difftime(Date, min(Date, na.rm = TRUE), units = "days")))
+
+# Build pairwise winner-loser data
+pairwise_results <- games_df %>%
+  filter(!is.na(`Score A`) & !is.na(`Score B`)) %>%
+  mutate(
+    Winning_P1 = if_else(`Score A` > `Score B`, `Team A Player 1`, `Team B Player 1`),
+    Winning_P2 = if_else(`Score A` > `Score B`, `Team A Player 2`, `Team B Player 2`),
+    Losing_P1  = if_else(`Score A` < `Score B`, `Team A Player 1`, `Team B Player 1`),
+    Losing_P2  = if_else(`Score A` < `Score B`, `Team A Player 2`, `Team B Player 2`)
+  ) %>%
+  select(Date_num, Winning_P1, Winning_P2, Losing_P1, Losing_P2) %>%
+  pivot_longer(c(Winning_P1, Winning_P2), names_to = "win_role", values_to = "Winner") %>%
+  pivot_longer(c(Losing_P1, Losing_P2), names_to = "lose_role", values_to = "Loser") %>%
+  transmute(Date = Date_num, Player1 = Winner, Player2 = Loser, Score = 1) %>%
+  distinct()
+
+# Build input for Elo (losses as 0)
+elo_input <- bind_rows(
+  pairwise_results,
+  pairwise_results %>%
+    mutate(Player1 = Player2, Player2 = Player1, Score = 0)
+)
+
+# Run Elo model
+elo_run <- elo(elo_input, init = 1500, k = 32, history = TRUE)
+
+#  Print final ratings
+elo_ratings$ratings %>%
+  arrange(desc(Rating)) %>%
+  mutate(Rating = round(Rating, 0)) %>%
+  slice_head(n = 25)
+```
+
+```{r}
+library(purrr)
+
+# Extract dim names
+players <- dimnames(elo_run$history)[[1]]
+periods <- dimnames(elo_run$history)[[2]]
+
+# Build tidy data frame
+elo_history <- map_dfr(seq_along(periods), function(i) {
+  tibble(
+    Period = as.integer(periods[i]),
+    Player = players,
+    Rating = elo_run$history[, i, "Rating"]
+  )
+})
+
+# Filter to your players
+players_to_plot <- c("Jim Elsner", "Diana Elsner", "JaSun Burdick", "Craig Anderson", "Hank Bass", "Drew Magee", "Jordan Huston", "Scott Schmucker", "Conrad Damon", "Harvey Brandt", "John Elsner", "Mike Prost")
+elo_history_filtered <- elo_history %>%
+  filter(Player %in% players_to_plot)
+
+library(lubridate)
+
+# Reconstruct dates from Date_num
+period_dates <- elo_input %>%
+  distinct(Date) %>%
+  arrange(Date) %>%
+  mutate(Period = row_number(),
+         Actual_Date = min(games_df$Date, na.rm = TRUE) + days(Date)) %>%
+  select(Period, Actual_Date)
+
+elo_history_with_date <- elo_history %>%
+  left_join(period_dates, by = "Period")
+
+ggplot(elo_history_with_date %>% filter(Player %in% players_to_plot),
+       aes(x = Actual_Date, y = Rating, color = Player)) +
+  geom_line(alpha = 0.7) +  # main lines
+  geom_smooth(se = FALSE, method = "loess", span = 0.75) +  # smoothed trend line
+  facet_wrap(~ Player, scales = "fixed", ncol = 3) +  # small multiples
+  labs(
+    title = "Elo Ratings Over Time by Player",
+    x = "Date",
+    y = "Elo Rating"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "none")
+```
